--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,11 +1,10 @@
 @import "bootstrap";
 
-body {
-  padding-top: 60px;
-  padding-bottom: 30px;
-}
-
 .media img.media-object {
   width: 64px;
   height: 64px;
+}
+
+.navbar-static-top {
+  margin-bottom: 19px;
 }
